2013-08-20  Kenichi Handa  <handa@gnu.org>

	* character.c (string_char): Improve commentary.

2013-08-20  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c (SIGNATURE_DIGESTSIZE): Remove.
	(struct animation_cache): Make signature a flexible array member.
	All uses changed.  This is a tad slower but may insulate us better
	from future changes to ImageMagick.

2013-08-19  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c: Shrink memory needed for animation cache.
	(SIGNATURE_DIGESTSIZE): New constant.
	(struct animation_cache): Make 'signature' a fixed size array of bytes.
	(imagemagick_create_cache): Copy the signature.  This saves
	several KB of memory that ImageMagick wastes per signature.
	Don't bother updating the update_time, as the caller does that now.
	(imagemagick_prune_animation_cache): Don't destroy the signature, as
	it's a fixed size struct member now.
	(imagemagick_get_animation_cache): Always destroy the signature,
	as it's now imagemagick_create_cache's responsibility to copy it.
	Avoid duplicate calls to strcmp and to imagemagick_create_cache,
	and use memcmp rather than strcmp.
	eassert that ImageMagick returns a signature of the specified length.

2013-08-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_get_animation_cache): Don't segfault on
	each invocation.
	(imagemagick_get_animation_cache): Revert to previous definition
	so that it actually works.  But keep the memory leak fix.
	(imagemagick_get_animation_cache): Fix memory leak.

2013-08-19  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c: Fix animation cache signature memory leak.
	Fix some other minor performance problems while we're at it.
	(imagemagick_create_cache): Clear just the members that
	need clearing.  Don't set update_time, as caller does that now.
	(imagemagick_prune_animation_cache, imagemagick_get_animation_cache):
	Simplify by using pointer-to-pointer instead of a prev pointer.
	(imagemagick_prune_animation_cache): Use make_emacs_time rather