@@ -1,3 +1,9 @@
+2013-08-21  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* process.c (allocate_pty) [PTY_OPEN]: Set fd's FD_CLOEXEC flag.
+	We can't portably rely on PTY_OPEN doing that, even if
+	it calls posix_openpt with O_CLOEXEC.
+
 2013-08-20  Kenichi Handa  <handa@gnu.org>
 
 	* character.c (string_char): Improve commentary.
